Bugfix on showFullClasses: state was not preserved. Wrapped trim table in div.

--- a/css/trimesterTable.css
+++ b/css/trimesterTable.css
@@ -1,7 +1,8 @@
-#trimesterTable {
-    border-style: none;
-    border-color: black;
-
+#trimesterDiv {
+    & table {
+        border-style: none;
+        border-color: black;
+    }
     & tr.trimesterRow {
         border-style: solid;
         border-collapse: collapse;
